--- a/app/src/main/res/drawable/gradient_background.xml
+++ b/app/src/main/res/drawable/gradient_background.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#ff7c6e"
-        android:endColor="#ab31ff"
+    <gradient android:startColor="@color/pink_start"
+        android:endColor="@color/pink_end"
         android:angle="135"></gradient>
 </shape>
