--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,99 +1,109 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/dark"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    android:orientation="vertical"
+    android:weightSum="6"
+    android:gravity="bottom"
+    tools:ignore="UselessParent"
     >
 
 
-    <LinearLayout
-        android:background="@drawable/gradient_background"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="bottom"
-        android:orientation="vertical"
-        android:weightSum="6">
+
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:textSize="45sp"
+            android:layout_gravity="top"
+            android:layout_marginStart="42dp"
             android:layout_marginBottom="12dp"
             android:gravity="center"
             android:text="Tasky"
-            android:textStyle="italic|bold"
-            android:textColor="#d8d8d8" />
+            android:textColor="#d8d8d8"
+            android:textSize="35sp"
+            android:textStyle="italic|bold" />
 
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="left">
+            android:layout_marginStart="42dp"
+            android:layout_gravity="top">
 
             <ImageView
-                android:layout_width="245dp"
-                android:layout_height="245dp"
-                android:layout_marginLeft="2dp"
-                android:src="@drawable/ic_tasky_illustration" />
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_tasky_logo"
+                android:layout_marginBottom="115dp"/>
         </FrameLayout>
+
+
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_gravity="bottom"
             android:background="@drawable/bt_round_blue"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_gravity="center"
-                android:gravity="center"
-                android:orientation="horizontal"
-                android:weightSum="4">
+                android:layout_weight="1"
+                android:gravity="center|bottom"
+                android:orientation="horizontal">
+
                 <ImageView
-                    android:layout_width="28dp"
-                    android:layout_margin="7dp"
-                    android:layout_height="28dp"
-                    android:background="@drawable/circle"
-                    android:backgroundTint="#fedc97"
+                    android:layout_marginTop="14dp"
+                    android:layout_width="23dp"
+                    android:layout_height="24dp"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginRight="7dp"
                     android:layout_weight="1"
-                    />
+                    android:background="@drawable/circle"
+                    android:backgroundTint="#fedc97" />
+
                 <ImageView
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:layout_margin="7dp"
-                    android:background="@drawable/circle"
-                    android:backgroundTint="#d8d8d8"
+                    android:layout_width="23dp"
+                    android:layout_marginTop="14dp"
+                    android:layout_height="23dp"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginRight="7dp"
                     android:layout_weight="1"
-                    />
+                    android:background="@drawable/circle"
+                    android:backgroundTint="#d8d8d8" />
+
                 <ImageView
-                    android:layout_width="28dp"
-                    android:layout_height="28dp"
-                    android:layout_margin="7dp"
-                    android:background="@drawable/circle"
-                    android:backgroundTint="#d8d8d8"
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
+                    android:layout_marginTop="14dp"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginRight="7dp"
                     android:layout_weight="1"
-                    />
+                    android:background="@drawable/circle"
+                    android:backgroundTint="#d8d8d8" />
+
                 <ImageView
-                    android:layout_width="28dp"
-                    android:layout_margin="7dp"
-                    android:layout_height="28dp"
-                    android:background="@drawable/circle"
-                    android:backgroundTint="#d8d8d8"
+                    android:layout_width="23dp"
+                    android:layout_marginTop="14dp"
+                    android:layout_height="23dp"
+                    android:layout_marginLeft="7dp"
+                    android:layout_marginRight="7dp"
                     android:layout_weight="1"
-                    />
+                    android:background="@drawable/circle"
+                    android:backgroundTint="#d8d8d8" />
 
             </LinearLayout>
-            
+
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="24dp"
                 android:layout_weight="1"
                 android:gravity="right"
                 android:orientation="horizontal"
@@ -103,28 +113,28 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="#323642"
+                    android:background="@android:color/transparent"
                     android:text="3"
                     android:textColor="#d8d8d8"
-                    android:textSize="26sp" />
+                    android:textSize="24sp" />
 
                 <Button
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="#323642"
+                    android:background="@android:color/transparent"
                     android:text="2"
                     android:textColor="#d8d8d8"
-                    android:textSize="26sp" />
+                    android:textSize="24sp" />
 
                 <Button
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="#323642"
+                    android:background="@android:color/transparent"
                     android:text="1"
                     android:textColor="#d8d8d8"
-                    android:textSize="26sp" />
+                    android:textSize="24sp" />
 
 
             </LinearLayout>
@@ -141,28 +151,28 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="#323642"
+                    android:background="@android:color/transparent"
                     android:text="4"
                     android:textColor="#d8d8d8"
-                    android:textSize="26sp" />
+                    android:textSize="24sp" />
 
                 <Button
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="#323642"
+                    android:background="@android:color/transparent"
                     android:text="5"
                     android:textColor="#d8d8d8"
-                    android:textSize="26sp" />
+                    android:textSize="24sp" />
 
                 <Button
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="#323642"
+                    android:background="@android:color/transparent"
                     android:text="6"
                     android:textColor="#d8d8d8"
-                    android:textSize="26sp" />
+                    android:textSize="24sp" />
 
 
             </LinearLayout>
@@ -179,34 +189,35 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="#323642"
+                    android:background="@android:color/transparent"
                     android:text="7"
                     android:textColor="#d8d8d8"
-                    android:textSize="26sp" />
+                    android:textSize="24sp" />
 
                 <Button
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="#323642"
+                    android:background="@android:color/transparent"
                     android:text="8"
                     android:textColor="#d8d8d8"
-                    android:textSize="26sp" />
+                    android:textSize="24sp" />
 
                 <Button
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="#323642"
+                    android:background="@android:color/transparent"
                     android:text="9"
                     android:textColor="#d8d8d8"
-                    android:textSize="26sp" />
+                    android:textSize="24sp" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="24dp"
                 android:layout_weight="1"
                 android:gravity="right"
                 android:orientation="horizontal"
@@ -217,10 +228,10 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="#323642"
+                    android:background="@android:color/transparent"
                     android:text="0"
                     android:textColor="#d8d8d8"
-                    android:textSize="26sp" />
+                    android:textSize="24sp" />
 
                 <ImageButton
                     android:layout_width="0dp"
@@ -231,17 +242,10 @@
                     android:scaleY="0.35"
                     android:text="1"
                     android:textColor="#d8d8d8"
-                    android:textSize="26sp" />
+                    android:textSize="24sp" />
 
 
             </LinearLayout>
 
         </LinearLayout>
-
-    </LinearLayout>
-
-
-
-
-
-</RelativeLayout>
+</LinearLayout>
