--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimaryDark">#323642</color>
+
+    <color name="dark">#323642 </color>
+    <color name="light">#D8D8D8</color>
+    <color name="creamy">#FEDC97</color>
+    <color name="pink_start">#B122E5</color>
+    <color name="pink_end">#FF63DE </color>
     <color name="colorAccent">#D81B60</color>
 </resources>
