--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,251 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@color/dark"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="6"
-    android:gravity="bottom"
     tools:ignore="UselessParent"
     >
-
-
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top"
-            android:layout_marginStart="42dp"
-            android:layout_marginBottom="12dp"
-            android:gravity="center"
-            android:text="Tasky"
-            android:textColor="#d8d8d8"
-            android:textSize="35sp"
-            android:textStyle="italic|bold" />
-
+    <LinearLayout
+        android:background="@color/dark"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:weightSum="6"
+        android:gravity="top"
+        tools:ignore="UselessParent">
         <FrameLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="42dp"
-            android:layout_gravity="top">
-
+            android:orientation="horizontal">
             <ImageView
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@drawable/ic_tasky_logo"
-                android:layout_marginBottom="115dp"/>
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="10dp"
+                android:background="@drawable/ic_tasky_logo"/>
+            <ImageButton
+                android:layout_width="40dp"
+                android:layout_marginTop="13dp"
+                android:layout_marginRight="10dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:background="@drawable/ic_menu"/>
         </FrameLayout>
-
-
-
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:background="@drawable/bt_round_blue"
-            android:orientation="vertical">
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:gravity="center|bottom"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:layout_marginTop="14dp"
-                    android:layout_width="23dp"
-                    android:layout_height="24dp"
-                    android:layout_marginLeft="7dp"
-                    android:layout_marginRight="7dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/circle"
-                    android:backgroundTint="#fedc97" />
-
-                <ImageView
-                    android:layout_width="23dp"
-                    android:layout_marginTop="14dp"
-                    android:layout_height="23dp"
-                    android:layout_marginLeft="7dp"
-                    android:layout_marginRight="7dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/circle"
-                    android:backgroundTint="#d8d8d8" />
-
-                <ImageView
-                    android:layout_width="23dp"
-                    android:layout_height="23dp"
-                    android:layout_marginTop="14dp"
-                    android:layout_marginLeft="7dp"
-                    android:layout_marginRight="7dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/circle"
-                    android:backgroundTint="#d8d8d8" />
-
-                <ImageView
-                    android:layout_width="23dp"
-                    android:layout_marginTop="14dp"
-                    android:layout_height="23dp"
-                    android:layout_marginLeft="7dp"
-                    android:layout_marginRight="7dp"
-                    android:layout_weight="1"
-                    android:background="@drawable/circle"
-                    android:backgroundTint="#d8d8d8" />
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                android:layout_weight="1"
-                android:gravity="right"
-                android:orientation="horizontal"
-                android:weightSum="3">
-
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:text="3"
-                    android:textColor="#d8d8d8"
-                    android:textSize="24sp" />
-
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:text="2"
-                    android:textColor="#d8d8d8"
-                    android:textSize="24sp" />
-
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:text="1"
-                    android:textColor="#d8d8d8"
-                    android:textSize="24sp" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="right"
-                android:orientation="horizontal"
-                android:weightSum="3">
-
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:text="4"
-                    android:textColor="#d8d8d8"
-                    android:textSize="24sp" />
-
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:text="5"
-                    android:textColor="#d8d8d8"
-                    android:textSize="24sp" />
-
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:text="6"
-                    android:textColor="#d8d8d8"
-                    android:textSize="24sp" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="right"
-                android:orientation="horizontal"
-                android:weightSum="3">
-
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:text="7"
-                    android:textColor="#d8d8d8"
-                    android:textSize="24sp" />
-
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:text="8"
-                    android:textColor="#d8d8d8"
-                    android:textSize="24sp" />
-
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:text="9"
-                    android:textColor="#d8d8d8"
-                    android:textSize="24sp" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="24dp"
-                android:layout_weight="1"
-                android:gravity="right"
-                android:orientation="horizontal"
-                android:weightSum="3">
-
-
-                <Button
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@android:color/transparent"
-                    android:text="0"
-                    android:textColor="#d8d8d8"
-                    android:textSize="24sp" />
-
-                <ImageButton
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:background="@drawable/ic_backspace_arrow"
-                    android:scaleX="0.25"
-                    android:scaleY="0.35"
-                    android:text="1"
-                    android:textColor="#d8d8d8"
-                    android:textSize="24sp" />
-
-
-            </LinearLayout>
-
+            android:orientation="horizontal">
+            
         </LinearLayout>
-</LinearLayout>
+
+    </LinearLayout>
+</FrameLayout>
