--- a/app/src/main/res/layout/today_frag.xml
+++ b/app/src/main/res/layout/today_frag.xml
@@ -21,18 +21,29 @@
         <ImageButton
             android:layout_width="match_parent"
             android:layout_margin="14dp"
-            android:layout_height="50dp"
+            android:layout_height="65dp"
             android:id="@+id/addTask"
             android:background="@drawable/ic_add_task_bg"
             android:src="@drawable/ic_add"
             android:gravity="center"/>
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/task_rv_todo"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/task_rv_todo"
+                android:layout_width="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_height="wrap_content"/>
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:id="@+id/noTaskTodo"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_undraw_no_data_qbuo_copy"
+                android:visibility="gone"/>
+        </FrameLayout>
 
         <TextView
             android:layout_width="wrap_content"
@@ -43,11 +54,24 @@
             android:layout_marginLeft="14dp"
             android:layout_marginTop="18dp"/>
 
-        <ImageView
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="center"
-            android:background="@drawable/ic_undraw_no_data_qbuo_copy" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/task_rv_done"
+                android:layout_width="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_height="wrap_content"/>
+            <ImageView
+                android:layout_width="70dp"
+                android:id="@+id/noTaskDone"
+                android:layout_height="70dp"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_undraw_no_data_qbuo_copy"
+                android:visibility="gone"/>
+        </FrameLayout>
 
     </LinearLayout>
 
