--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -138,16 +138,24 @@
             android:id="@+id/mainFrame"/>
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/menu_layout"
-        android:visibility="gone"
+    <FrameLayout
         android:layout_marginTop="50dp"
         android:layout_width="match_parent"
-        android:background="@drawable/menu"
-        android:layout_height="200dp"
-        android:orientation="vertical">
-
-    </LinearLayout>
+        android:layout_height="match_parent">
+        <FrameLayout
+            android:visibility="gone"
+            android:id="@+id/menu_frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#55000000"/>
+        <LinearLayout
+            android:id="@+id/menu_layout"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:background="@drawable/menu"
+            android:orientation="vertical"
+            android:visibility="gone"/>
+    </FrameLayout>
     <FrameLayout
         android:background="@color/dark"
         android:layout_width="match_parent"
