--- a/app/src/main/res/layout/card_task.xml
+++ b/app/src/main/res/layout/card_task.xml
@@ -3,33 +3,93 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="120dp"
     android:layout_marginRight="8dp"
     android:layout_marginTop="8dp"
     android:layout_marginLeft="8dp"
-    android:background="@drawable/ic_add_task_bg"
+    android:background="@drawable/ic_task_bg"
     android:backgroundTint="@color/light"
-
     >
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/dark"
-        android:layout_marginTop="8dp"
+    <FrameLayout
         android:layout_marginLeft="8dp"
-        android:textSize="18sp"
-        android:layout_gravity="left"
-        android:text="ViTo"
-        android:id="@+id/task_title"
-        />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/purple"
+            android:layout_marginTop="8dp"
+            android:textSize="18sp"
+            android:layout_gravity="left"
+            android:text="ViTo"
+            android:id="@+id/task_title"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="18sp"
+            android:id="@+id/taskDeadLine"
+            android:text="08:30"
+            android:textColor="@color/purple"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_gravity="right"
+            />
+    </FrameLayout>
     <TextView
         android:text="salam khaste nabashi kakam :)"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="left"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:textColor="@color/dark"
         android:textSize="16sp"
         android:id="@+id/task"
         />
+
+    <FrameLayout
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginLeft="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="left"
+            android:background="@drawable/ic_task_bg"
+            android:backgroundTint="@color/creamy"
+            android:orientation="horizontal">
+            <ImageView
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="6dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_break_bell"/>
+            <TextView
+                android:id="@+id/alarmTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="6dp"
+                android:text="08:00"
+                />
+            <ImageView
+                android:layout_margin="6dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_add_time"
+                android:visibility="gone"/>
+        </LinearLayout>
+        <ImageButton
+            android:id="@+id/forward"
+            android:layout_width="wrap_content"
+            android:layout_height="28dp"
+            android:layout_marginRight="8dp"
+            android:layout_gravity="right"
+            android:src="@drawable/ic_forward"
+            />
+    </FrameLayout>
 
 </LinearLayout>
