--- a/app/src/main/res/layout/next_days_frag.xml
+++ b/app/src/main/res/layout/next_days_frag.xml
@@ -13,14 +13,15 @@
         android:textSize="16sp"
         android:layout_marginLeft="14dp"
         android:layout_marginTop="18dp"/>
+
     <ImageButton
-        android:layout_width="match_parent"
-        android:layout_margin="14dp"
-        android:layout_height="50dp"
         android:id="@+id/addTask"
+        android:layout_width="match_parent"
+        android:layout_height="65dp"
+        android:layout_margin="14dp"
         android:background="@drawable/ic_add_task_bg"
-        android:src="@drawable/ic_add"
-        android:gravity="center">
+        android:gravity="center"
+        android:src="@drawable/ic_add">
 
     </ImageButton>
    
