--- a/app/src/main/res/layout/next_days_frag.xml
+++ b/app/src/main/res/layout/next_days_frag.xml
@@ -1,29 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.v4.widget.NestedScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/dark">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="To Do"
-        android:textColor="@color/light"
-        android:textSize="16sp"
-        android:layout_marginLeft="14dp"
-        android:layout_marginTop="18dp"/>
-
-    <ImageButton
-        android:id="@+id/addTask"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="65dp"
-        android:layout_margin="14dp"
-        android:background="@drawable/ic_add_task_bg"
-        android:gravity="center"
-        android:src="@drawable/ic_add">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="To Do"
+            android:textColor="@color/light"
+            android:textSize="16sp"
+            android:layout_marginLeft="14dp"
+            android:layout_marginTop="18dp"/>
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_margin="14dp"
+            android:layout_height="65dp"
+            android:id="@+id/addTask"
+            android:background="@drawable/ic_add_task_bg"
+            android:src="@drawable/ic_add"
+            android:gravity="center"/>
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="20dp">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/task_rv_todo"
+                android:layout_width="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_height="wrap_content"/>
+            <ImageView
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:id="@+id/noTaskTodo"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_undraw_no_data_qbuo_copy"
+                android:visibility="gone"/>
+        </FrameLayout>
+   </LinearLayout>
 
-    </ImageButton>
-   
-
-</LinearLayout>
+</android.support.v4.widget.NestedScrollView>
