--- a/app/src/main/res/layout/task_view_dialog.xml
+++ b/app/src/main/res/layout/task_view_dialog.xml
@@ -41,29 +41,13 @@
             android:orientation="horizontal">
 
 
-            <EditText
-                android:id="@+id/addTaskM"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:inputType="number"
-                android:hint="01"
-                android:layout_marginLeft="6dp"
-                android:textSize="20dp"
-                android:padding="0dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textStyle="bold"
-                android:text=" \\ "/>
-            <EditText
-                android:id="@+id/addTaskD"
-                android:layout_width="wrap_content"
-                android:inputType="number"
-                android:hint="08"
-                android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:padding="0dp"
-                android:layout_marginRight="6dp"/>
+                android:paddingLeft="10dp"
+                android:text="Time "/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -125,48 +109,46 @@
         android:layout_marginTop="12dp"
         android:layout_marginBottom="18dp"
         android:layout_marginRight="20dp"
-
         android:layout_marginLeft="20dp">
         <LinearLayout
             android:clickable="true"
-            android:gravity="center_vertical"
             android:layout_width="wrap_content"
-            android:layout_height="40dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="left"
             android:background="@drawable/ic_task_bg"
-            android:backgroundTint="@color/light"
+            android:backgroundTint="@color/creamy"
             android:orientation="horizontal">
+
             <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
+                android:layout_marginRight="3dp"
+                android:layout_marginTop="6dp"
+                android:src="@drawable/ic_camera" />
+            <ImageButton
+                android:id="@+id/show_pic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_break_bell"/>
-
-
-            <EditText
-                android:id="@+id/addTaskAlarmH"
+                android:src="@drawable/ic_eye"
+                android:background="@color/creamy"
+                android:layout_marginRight="10dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="6dp"
+                />
+            <ImageButton
+                android:id="@+id/add_pic"
+                android:visibility="gone"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="6dp"
+                android:layout_marginBottom="6dp"
+                android:layout_marginLeft="8dp"
+                android:background="@color/creamy"
                 android:layout_width="wrap_content"
-                android:inputType="number"
-                android:hint="00"
                 android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:padding="0dp"
-                android:layout_marginLeft="6dp"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textStyle="bold"
-                android:text=" : "/>
-            <EditText
-                android:id="@+id/addTaskAlarmM"
-                android:layout_width="wrap_content"
-                android:inputType="number"
-                android:hint="00"
-                android:layout_height="wrap_content"
-                android:textSize="20dp"
-                android:padding="0dp"
-                android:layout_marginRight="6dp"/>
-
+                android:src="@drawable/ic_add_time"
+                />
         </LinearLayout>
         <Button
             android:text="Save"
