--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -148,13 +148,91 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#55000000"/>
-        <LinearLayout
+        <FrameLayout
             android:id="@+id/menu_layout"
+            android:visibility="gone"
+            android:clickable="true"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:background="@drawable/menu"
-            android:orientation="vertical"
-            android:visibility="gone"/>
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:id="@+id/menu_login"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:background="@drawable/menu"
+                android:orientation="vertical"
+                android:visibility="visible">
+                <EditText
+                    android:id="@+id/username"
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:hint="Username: "
+                    android:gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/ic_task_bg"/>
+                <EditText
+                    android:id="@+id/password"
+                    android:layout_width="200dp"
+                    android:layout_height="50dp"
+                    android:hint="Password: "
+                    android:gravity="center"
+                    android:layout_marginTop="10dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/ic_task_bg"/>
+                <Button
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:text="login"
+                    android:textColor="@color/dark"
+                    android:id="@+id/login"
+                    android:layout_marginRight="14dp"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="15dp"
+                    android:backgroundTint="@color/creamy"
+                    android:background="@drawable/ic_task_bg"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/menu_profile"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:background="@drawable/menu"
+                android:orientation="vertical"
+                android:visibility="gone">
+                <TextView
+                    android:id="@+id/fullname"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:text="Full name:    "
+                    android:textColor="@color/light"
+                    android:gravity="center_vertical"
+                    android:textSize="20sp"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="14dp"
+                    android:layout_marginTop="10dp"/>
+                <TextView
+                    android:id="@+id/email"
+                    android:layout_width="wrap_content"
+                    android:layout_height="50dp"
+                    android:text="Email:    "
+                    android:textColor="@color/light"
+                    android:gravity="center_vertical"
+                    android:textSize="20sp"
+                    android:layout_gravity="left"
+                    android:layout_marginLeft="14dp"
+                    android:layout_marginTop="10dp"/>
+
+                <Button
+                    android:layout_width="100dp"
+                    android:layout_height="40dp"
+                    android:text="log out"
+                    android:id="@+id/logout"
+                    android:layout_marginRight="14dp"
+                    android:layout_gravity="right"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/ic_task_bg"/>
+            </LinearLayout>
+        </FrameLayout>
     </FrameLayout>
     <FrameLayout
         android:background="@color/dark"
